--- a/WebAPI/client-app/Views/components/dialog-template-field.html
+++ b/WebAPI/client-app/Views/components/dialog-template-field.html
@@ -3,9 +3,11 @@
     .input-group-text {
       min-width: 150px;
     }
+
     table tr:first-child td button[data-action='moveUp'] {
       display: none;
     }
+
     .overflow-y-auto {
       overflow-y: auto;
     }
@@ -50,19 +52,17 @@
       </div>
 
       <div class="mt-3 overflow-y-auto" style="min-height: 180px;">
-        <data-table 
-        :class-table="table table-white table-bordered mt-2" 
-        :class-thead="table-light text-center"
-        style="width: 98%;">
+        <data-table :class-table="table table-white table-bordered mt-2" :class-thead="table-light text-center"
+          style="width: 98%;">
           <template>
             <div slot="action" class="text-end">
-                <button type="button" title="Move Up" class="btn btn-outline-primary rounded-pill bi bi-arrow-up btn-sm"
-                  data-action="moveUp" data-value="${index}" >
-                </button>
-                <button type="button" title="Delete Option"
-                  class="btn btn-outline-primary rounded-pill bi bi-trash btn-sm" 
-                  data-action="delete" data-value="${index}" >
-                </button>
+              <button type="button" title="Move Up" class="btn btn-outline-primary rounded-pill bi bi-arrow-up btn-sm"
+                data-action="moveUp" data-value="${index}">
+              </button>
+              <button type="button" title="Delete Option"
+                class="btn btn-outline-primary rounded-pill bi bi-trash btn-sm" data-action="delete"
+                data-value="${index}">
+              </button>
             </div>
           </template>
         </data-table>
@@ -77,16 +77,18 @@
 <script type="module">
   import API from './utils/API.js';
   import * as Enum from './Enum.js';
+  import * as $global from './global.js';
+
   export default class DialogField extends HTMLDialogElement {
     #info = {};
     masters = [];
-    header=[
-      {text:"#",value:"required"},
-      {text:"Nombre",value:"name"},
-      {text:"Propiedad",value:"attributeName"},
-      {text:"Tipo",value:"idType",style:{width: "20%"}},
-      {text:"Defecto",value:"defaultValue",style:{width: "20%"}},
-      {text:"",value:"index",slot:"action",style:{width: "20%"}}
+    header = [
+      { text: "#", value: "required" },
+      { text: "Nombre", value: "name" },
+      { text: "Propiedad", value: "attributeName" },
+      { text: "Tipo", value: "idType", style: { width: "20%" } },
+      { text: "Defecto", value: "defaultValue", style: { width: "20%" } },
+      { text: "", value: "index", slot: "action", style: { width: "20%" } }
     ]
     constructor() {
       super();
@@ -96,8 +98,8 @@
     async connectedCallback() {
       const clone = document.querySelector('#dialog-template-field').content.cloneNode(true);
       this.appendChild(clone);
-      this.dataTable=this.querySelector("data-table")
-      
+      this.dataTable = this.querySelector("data-table")
+
       const onCancel = this.eventCancel.bind(this);
       const onSave = this.eventSave.bind(this);
       const onAdd = this.eventAdd.bind(this);
@@ -106,13 +108,13 @@
       this.querySelectorAll('[data-target="close"]').forEach(btn => {
         btn.addEventListener("click", onCancel);
       });
-      this.querySelector("#save").addEventListener("click", onSave);
+      this.querySelector("#formTemplate").addEventListener("submit", onSave);
       this.querySelector("#add").addEventListener("click", onAdd);
       this.querySelector("#idType").addEventListener("change", onChange);
       this.#loadTypeField();
     }
     async openDialog(info) {
-      this.showModal();
+      
       await this.#getMaster()
       this.#loadMasters();
       const icon = this.querySelector("div.card-title i.bi");
@@ -126,6 +128,7 @@
         icon.classList.add("bi-plus-circle");
       }
       this.#renderTable(this.#info.data);
+      this.showModal();
     }
 
     eventSave(event) {
@@ -150,7 +153,7 @@
         "attributeName": this.querySelector("#attributeName").value,
         "defaultValue": this.querySelector("#defaultValue").value,
         "required": this.querySelector("#required").checked,
-        "order": this.#info.data[count].order + 1,
+        "place": (this.#info.data[count]?.place??0) + 1 ,
         "status": Enum.status.Inserted
       }
       this.#info.data.push(item);
@@ -178,45 +181,34 @@
 
     eventMove(event, move) {
       const index = parseInt(event.target.dataset.value);
-      this.#info.data[index + move].order = index;
-      this.#info.data[index].order = index + move;
+      this.#info.data[index + move].place = index;
+      this.#info.data[index].place = index + move;
       this.#info.data[index].status = this.#info.data[index].status || Enum.status.Updated;
       this.#info.data[index + move].status = this.#info.data[index + move].status || Enum.status.Updated;
-      this.#info.data = this.#info.data.sort((a, b) => a.order - b.order);
+      this.#info.data = this.#info.data.sort((a, b) => a.place - b.place);
       this.#renderTable(this.#info.data);
     }
     eventChangeSelect(event) {
       const value = parseInt(event.target.value);
       const comboSelection = this.typeField.filter(item => item == "Seleccion" || item == "Seleccion Multiple");
-      document.querySelector("#idMaster").disabled = !comboSelection.includes(this.typeField[value]);
+      this.querySelector("#idMaster").disabled = !comboSelection.includes(this.typeField[value]);
     }
     #default() {
       return { idMaster: null, data: [], Updated: false };
     }
     #loadTypeField(value = null) {
       const cbTypeField = this.querySelector("#idType");
-      Enum.typeField.filter((item, index) => index > 0).forEach(item => {
-        let optionItem = document.createElement("OPTION")
-        optionItem.value = item.idType
-        optionItem.textContent = item.field
-        if (value && value === item.idType) {
-          optionItem.selected = true;
-        }
-        cbTypeField.appendChild(optionItem);
-      })
+      cbTypeField.querySelectorAll("[value]").forEach(item => item.value != '' && cbMaster.removeChild(item));
+      let list = Enum.typeField.filter((item, index) => index > 0)
+      list = $global.convertToOptionList(list, { text: 'field', value: 'idType' });
+      $global.loadComboBox(list, cbTypeField, value)
     }
     #loadMasters(value = null) {
       const cbMaster = this.querySelector("#idMaster");
       cbMaster.querySelectorAll("[value]").forEach(item => item.value != '' && cbMaster.removeChild(item));
-      this.masters.forEach(item => {
-        let optionItem = document.createElement("OPTION")
-        optionItem.value = item.idMaster
-        optionItem.textContent = item.name
-        if (value && value === item.idMaster) {
-          optionItem.selected = true;
-        }
-        cbMaster.appendChild(optionItem);
-      })
+      let list = $global.convertToOptionList(this.masters, { text: 'name', value: 'idMaster' });
+      $global.loadComboBox(list, cbMaster, value)
+
     }
     async #getMaster() {
       let response = await API.get("api/master")
@@ -224,29 +216,27 @@
         this.masters = await response.json();
       }
     }
-    #renderTable(list) {    
-      this.dataTable.setAttribute("header",JSON.stringify(this.header));
-      const listTable = list.map((item,index)=>{
-        const element ={...item};
-        element.required = item.required ? '🔑':'';
-        element.idType =  Enum.typeField.filter(f=>f.idType==item.idType)[0]?.field;
-        element.index= index;
+    #renderTable(list) {
+      this.dataTable.setAttribute("header", JSON.stringify(this.header));
+      const listTable = list.map((item, index) => {
+        const element = { ...item };
+        element.required = item.required ? '🔑' : '';
+        element.idType = Enum.typeField.filter(f => f.idType == item.idType)[0]?.field;
+        element.index = index;
         return element;
 
       })
-      this.dataTable.setAttribute("items",JSON.stringify(listTable))
+      this.dataTable.setAttribute("items", JSON.stringify(listTable))
 
       const btnClick = this.eventClickBtn.bind(this);
       const textClass = ['', 'text-primary', 'text-danger', 'text-success'];
-      this.dataTable.querySelectorAll("tbody tr").forEach((tr,index)=>{
+      this.dataTable.querySelectorAll("tbody tr").forEach((tr, index) => {
         tr.addEventListener("click", btnClick);
-        const status = list[index]?.status||Enum.status.None
+        const status = list[index]?.status || Enum.status.None
         if (status > Enum.status.None) {
           tr.querySelectorAll("td").forEach(td => td.classList.add(textClass[status]))
         }
       })
-      
-      this.dataTable.querySelector("thead").className="table-light text-center";
     }
   }
   window.customElements.define("dialog-template-field", DialogField, { extends: "dialog" });
