--- a/WebAPI/client-app/Views/index.html
+++ b/WebAPI/client-app/Views/index.html
@@ -27,16 +27,16 @@
             class="bi bi-person-circle"></span></button>
       </div>
     </nav>
-    <article id="mainPanel">
+    <main id="mainPanel">
       <section class="row" style="align-items: stretch;">
         <div class="col-3 collapse bg-secondary p-1 show" id="mainMenuCollapse" data-bs-parent="#mainPanel">
           <ui-menu></ui-menu>
         </div>
         <div class="col p-2" id="mainDraw"></div>
       </section>
-    </article>
+    </main>
   </div>
   <script type="text/javascript" src="assets/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="app.js" type="module"></script>
+  <script src="app.js" ></script>
 </body>
 </html>
