--- a/WebAPI/client-app/Views/pages/configure/view-template.html
+++ b/WebAPI/client-app/Views/pages/configure/view-template.html
@@ -1,46 +1,32 @@
 <template id="template-template">
     <div class="card text-bg-light">
         <div class="card-header">
-            <h2 class="float-start">Template</h2>
+            <h2 class="float-start">Plantillas</h2>
             <span class="float-end mt-1 me-1">
                 <button class="btn btn-primary bi bi-file-plus" title="New Template" data-action="new">Nuevo</button>
             </span>
         </div>
         <div class="card-body">
-            <table class="table table-white table-bordered">
-                <template id="row">
-                    <tr>
-                        <td data-property="index"></td>
-                        <td data-property="name"></td>
-                        <td data-property="modifyDate"
-                            data-function="modifyDate.replace(/T|Z/g,' ').replace(/\+.+/g,'')"></td>
-                        <td class="text-end">
-                            <button type="button" title="Edit Template"
-                                class="btn btn-outline-primary rounded-pill bi bi-pencil-fill btn-sm"
-                                data-action="edit">
-                            </button>
-                            <button type="button" title="Delete Template"
-                                class="btn btn-outline-primary rounded-pill bi bi-trash btn-sm"
-                                data-action="delete"></button>
-                            <button type="button" title="Edit Field"
-                                class="btn btn-outline-primary rounded-pill bi bi-list-check btn-sm"
-                                data-action="field"></button>
-                            <button type="button" title="Edit Children allowed"
-                                class="btn btn-outline-primary rounded-pill bi bi-diagram-2 btn-sm"
-                                data-action="children"></button>
-                        </td>
-                    </tr>
+            <data-table id="templateList" style="width: 98%;" :class-table="table table-white table-bordered mt-2"
+                :class-thead="table-light text-center">
+                <template>
+                    <div slot="action" class="text-end">
+                        <button type="button" title="Edit Template"
+                            class="btn btn-outline-primary rounded-pill bi bi-pencil-fill btn-sm" data-action="edit"
+                            data-value="${index}">
+                        </button>
+                        <button type="button" title="Delete Template"
+                            class="btn btn-outline-primary rounded-pill bi bi-trash btn-sm" data-action="delete"
+                            data-value="${idTemplate}"></button>
+                        <button type="button" title="Edit Field"
+                            class="btn btn-outline-primary rounded-pill bi bi-list-check btn-sm" data-action="field"
+                            data-value="${idTemplate}"></button>
+                        <button type="button" title="Edit Children allowed"
+                            class="btn btn-outline-primary rounded-pill bi bi-diagram-2 btn-sm" data-action="children"
+                            data-value="${idTemplate}"></button>
+                    </div>
                 </template>
-                <thead class="table-light">
-                    <tr>
-                        <th>#</th>
-                        <th style="width: 40%">Nombre</th>
-                        <th style="width: 30%">Fecha Modificacion</th>
-                        <th style="width: 30%;">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
+            </data-table>
         </div>
     </div>
     <dialog is="dialog-template" style="width:640px"></dialog>
@@ -48,118 +34,159 @@
     <dialog is="dialog-template-children" style="width:760px"></dialog>
 </template>
 <script type="module">
-    import API from './utils/API.js';
-    import { status as Status } from './Enum.js';
+    import API from './utils/API.js'
+    import { status as Status } from './Enum.js'
 
     class TemplateView extends HTMLElement {
+        header = [
+            { text: "#", style: { width: "1%" } },
+            { text: "Plantilla", value: "name" },
+            { text: "Fecha Modificacion", value: "modifyDate", style: { width: "30%" } },
+            { text: "", value: "index", slot: "action", style: { width: "30%" } }
+        ]
         constructor() {
-            super();
+            super()
             this.templates = []
         }
-        async connectedCallback() {
-            const newtemplate = this.eventNew.bind(this)
-            const closeField = this.eventCloseField.bind(this)
-            const closeChildren = this.eventCloseChildren.bind(this)
-            const closetemplate = this.eventCloseTemplate.bind(this)
+        connectedCallback() {
+            const template = document.querySelector('#template-template')?.content?.cloneNode(true)
+            this.appendChild(template)
+            this.dataTable = this.querySelector("data-table#templateList")
+            this.querySelectorAll("dialog").forEach((dialog) => {
+                let onClose = null
+                switch (dialog.getAttribute('is')) {
+                    case 'dialog-template':
+                        onClose = this.eventCloseTemplate.bind(this)
+                        break
+                    case 'dialog-template-field':
+                        onClose = this.eventCloseField.bind(this)
+                        break
+                    case 'dialog-template-children':
+                        onClose = this.eventCloseChildren.bind(this)
+                        break
+                }
+                onClose == null || dialog.addEventListener("close", onClose)
+            })
+            const onCreate = this.eventNew.bind(this)
+            const onClickTable = this.eventClickBtn.bind(this)
 
-            await this.getTemplate()
-            this.#render()
-
-            this.dialogTemplate = this.querySelector("dialog[is='dialog-template']")
-            this.dialogField = this.querySelector("dialog[is='dialog-template-field']")
-            this.dialogChildren = this.querySelector("dialog[is='dialog-template-children']")
-            this.dialogTemplate.addEventListener("close", closetemplate)
-            this.dialogField.addEventListener("close", closeField)
-            this.dialogChildren.addEventListener("close", closeChildren)
-            this.querySelector("button[data-action='new']").addEventListener('click', newtemplate)
-
+            this.querySelector("button[data-action='new']").addEventListener('click', onCreate)
+            this.dataTable.addEventListener('click', onClickTable)
+            this.dataTable.setAttribute("header", JSON.stringify(this.header))
+            this.getTemplate()
         }
+
         async getTemplate() {
             let response = await API.get("api/template")
             if (response.ok) {
-                this.templates = await response.json()
+                let data = await response.json()
+                this.templates = [...data]
+                data.forEach((item, index) => {
+                    item.modifyDate = item.modifyDate.replace(/(T|Z)|(\+.*)/g, ' ').trim()
+                    item.index = index
+                })
+                this.#dispatcherTable(data)
             }
         }
-        async eventClickBtn(event) {
+        eventClickBtn(event) {
             const { tagName, dataset } = event.target
             if (tagName === "BUTTON") {
                 switch (dataset.action) {
                     case "edit":
-                        this.eventEdit(event);
-                        break;
+                        this.eventEdit(event)
+                        break
                     case "delete":
-                        this.eventDelete(event);
-                        break;
+                        this.eventDelete(event)
+                        break
                     case "field":
-                        this.eventEditField(event);
-                        break;
+                        this.eventEditField(event)
+                        break
                     case "children":
-                        this.eventEditChildren(event);
-                        break;
+                        this.eventEditChildren(event)
+                        break
                 }
             }
         }
-        async eventDelete(event) {
-            const index = event.target.parentNode.parentNode.dataset.value
+        eventNew(event) {
+            this.querySelector('[is=dialog-template]').openDialog(null)
+        }
+        eventEdit(event) {
+            const index = event.target.dataset.value
             const data = this.templates[index]
-            const response = await API.delete(`api/template/${data.idtemplate}`)
+            this.querySelector('[is=dialog-template]').openDialog(data)
+        }
+        async eventDelete(event) {
+            const idTemplate = event.target.dataset.value
+            const response = await API.delete(`api/template/${idTemplate}`)
             if (response.ok) {
-                await this.getTemplate()
-                this.#renderTable(this)
+                this.getTemplate()
             }
         }
-        async eventEdit(event) {
-            const index = event.target.parentNode.parentNode.dataset.value;
-            const data = this.templates[index]
-            this.dialogTemplate.openDialog(data)
+
+        async eventEditField(event) {
+            const idTemplate = event.target.dataset.value
+            let response = await API.get(`api/template/field/${idTemplate}`)
+            if (response.ok) {
+                let info = await response.json()
+                this.querySelector('[is=dialog-template-field]').openDialog({ "idTemplate": idTemplate, data: info })
+            }
         }
+        async eventEditChildren(event) {
+
+            const idTemplate = event.target.dataset.value
+            let response = await API.get(`api/template/children/${idTemplate}`)
+            if (response.ok) {
+                let info = await response.json()
+                const dialog = this.querySelector('[is=dialog-template-children]')
+                dialog.template = this.templates
+                dialog.openDialog({ "idTemplate": idTemplate, data: info })
+            }
+        }
+
         async eventCloseTemplate(event) {
-            let data = this.dialogTemplate.returnValue
-            if (data !== "") {
-                data = JSON.parse(data)
+            const { returnValue } = event.target
+            if (returnValue !== "") {
+                let data = JSON.parse(returnValue)
                 let response = {}
                 if (data.idTemplate !== null) {
-                    response = await API.post('api/template', JSON.stringify(data));
+                    response = await API.post('api/template', JSON.stringify(data))
                 } else {
                     response = API.put('api/template', JSON.stringify(data))
                 }
                 if (response.ok) {
-                    await this.getTemplate()
-                    this.#renderTable(this)
+                    this.getTemplate()
                 } else {
                     throw new Error(`Error ${response.status}:No se pudo completar la operacion`)
                 }
             }
         }
         async eventCloseField(event) {
-            let info = this.dialogField.returnValue;
-            if (info !== "") {
-                info = JSON.parse(info)
-                this.processSaveData(info.data, 'idField', 'api/template/field');
+            const { returnValue } = event.target
+            if (returnValue !== "") {
+                let { data } = JSON.parse(returnValue)
+                this.processSaveData(data, 'api/template/field')
             }
         }
         async eventCloseChildren(event) {
-            let info = this.dialogChildren.returnValue;
-            if (info !== "") {
-                info = JSON.parse(info)
-                await this.processSaveData(info.data, 'idField', 'api/template/children');
+            const { returnValue } = event.target
+            if (returnValue !== "") {
+                let data = JSON.parse(returnValue)
+                await this.processSaveData(data, 'api/template/children', { primaryKey: 'idTemplate', masterKey: 'idTemplateParent' })
             }
         }
-        async eventNew(event) {
-            this.dialogTemplate.openDialog(null)
-        }
-        async processSaveData(data, primaryKey, url) {
-            let response = {};
+
+        async processSaveData(data, url, { primaryKey = 'idField', masterKey = '' }) {
+            let response = {}
             if (data) {
-                let dataDelete = data.filter(item => item.status == Status.Deleted && item[primaryKey] !== null);
-                let dataInsert = data.filter(item => item.status == Status.Inserted);
-                let dataUpdate = data.filter(item => item.status == Status.Updated);
+                let dataDelete = data.filter(item => item.status == Status.Deleted && item[primaryKey] !== null)
+                let dataInsert = data.filter(item => item.status == Status.Inserted)
+                let dataUpdate = data.filter(item => item.status == Status.Updated)
 
                 if (dataUpdate.length > 0) {
                     dataUpdate = dataUpdate.map(item => {
-                        const { status, index, ...res } = item;
+                        const { status, index, ...res } = item
                         return res
-                    });
+                    })
                     response = await API.post(url, JSON.stringify(dataUpdate))
                     if (!response.ok) {
                         throw new Error(`Error ${response.status}:No se pudo Actualizar`)
@@ -167,76 +194,32 @@
                 }
                 if (dataInsert.length > 0) {
                     dataInsert = dataInsert.map(item => {
-                        const { status, index, ...res } = item;
+                        const { status, index, ...res } = item
                         return res
-                    });
+                    })
                     response = await API.put(url, JSON.stringify(dataInsert))
                     if (!response.ok) {
                         throw new Error(`Error ${response.status}: No se pudo Insertar`)
                     }
                 }
                 if (dataDelete.length > 0) {
-                    dataDelete = dataDelete.map(item => item[primaryKey]);
-                    dataDelete.forEach(async (id) => {
-                        response = await API.delete(`${url}/${id}`)
-                        if (!response.ok) {
-                            throw new Error(`Error ${response.status}:No se pudo borrar ${id}`)
+                    debugger
+                    for (let index = 0; index < dataDelete.length; index++) {
+                        if (masterKey !== '') {
+                            url = `${url}/${dataDelete[index][masterKey]}`
                         }
-                    });
+                        response = await API.delete(`${url}/${dataDelete[index][primaryKey]}`)
+                        if (!response.ok) {
+                            throw new Error(`Error ${response.status}:No se pudo borrar ${dataDelete[index][primaryKey]}`)
+                        }
+                    }
                 }
             }
+        }
 
-        }
-        async eventEditField(event) {
-            const index = event.target.parentNode.parentNode.dataset.value;
-            const idTemplate = this.templates[index].idTemplate;
-            let response = await API.get(`api/template/field/${idTemplate}`)
-            if (response.ok) {
-                let info = await response.json()
-                this.dialogField.openDialog({ "idTemplate": idTemplate, data: info })
-            }
-        }
-        async eventEditChildren(event) {
-            this.dialogField.templates = this.templates;
-            const index = event.target.parentNode.parentNode.dataset.value;
-            const idTemplate = this.templates[index].idTemplate;
-            let response = await API.get(`api/template/children/${idTemplate}`)
-            if (response.ok) {
-                let info = await response.json();
-                debugger
-                this.dialogChildren.templates = this.templates
-                this.dialogChildren.openDialog({ "idTemplate": idTemplate, data: info })
-            }
-        }
-        #render() {
-            const clone = document.querySelector('#template-template').content.cloneNode(true);
-            this.#renderTable(clone)
-            this.append(clone)
-        }
-        #renderTable(clone) {
-            const inner = clone.querySelector('table.table.table-white');
-            const tbody = inner.querySelector("tbody")
-            tbody.innerHTML = '';
-            const btnClick = this.eventClickBtn.bind(this);
-            this.templates.forEach((item, index) => {
-                item.index = index + 1
-                const row = inner.querySelector("#row").content.cloneNode(true)
-                const tds = row.querySelectorAll("td[data-property]");
-
-                tds.forEach(td => {
-                    let text = item[td.dataset.property];
-                    if (td.dataset.function) {
-                        const fn = new Function(td.dataset.property, `return ${td.dataset.function}`)
-                        text = fn(text)
-                    }
-                    td.textContent = text;
-                })
-                row.querySelector("tr").dataset.value = index;
-                row.querySelector("tr").addEventListener("click", btnClick)
-                tbody.appendChild(row)
-            })
+        #dispatcherTable(data) {
+            this.dataTable.setAttribute("items", JSON.stringify(data))
         }
     }
-
-    window.customElements.define('view-template', TemplateView);
+    window.customElements.define('view-template', TemplateView)
 </script>
