--- a/WebAPI/client-app/Views/pages/edit/view-node.html
+++ b/WebAPI/client-app/Views/pages/edit/view-node.html
@@ -20,7 +20,7 @@
   <div class="mt-3" style="height: calc(100vh - 100px);">
     <div class="row g-0  h-100">
       <div class="col-4">
-        <div is="tree-list" class="overflow-y-auto bg-secondary-subtle p-1 h-100 card me-1">
+        <tree-list class="overflow-y-auto bg-secondary-subtle p-1 h-100 card me-1">
           <template>
             <div slot="summary">
               <i class="bi bi-box-seam"></i>&nbsp;
@@ -31,7 +31,7 @@
               <span class="text-primary" data-href="${idNode}">${name}</span>
             </div>
           </template>
-        </div>
+        </tree-list>
       </div>
       <div class="col-8">
         <div class="tooltipTop">
@@ -68,7 +68,7 @@
 
       this.appendChild(clone);
       this.json = this.querySelector("div[is=node-edit]");
-      this.tree = this.querySelector("div[is=tree-list]");
+      this.tree = this.querySelector("tree-list");
       this.tree.addEventListener("click", onOpenDetails)
 
       this.dialogNode = this.querySelector("dialog[is='dialog-node-root']");
